Mouse does not work in popup menu in modal dialog under Linux
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox109 | --- | unaffected |
| firefox110 | --- | wontfix |
| firefox111 | --- | fixed |
People
(Reporter: welpy-cw, Assigned: welpy-cw)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files)
|
50.20 KB,
video/mp4
|
Details | |
|
47.74 KB,
video/mp4
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
pascalc|PTO
:
approval-mozilla-beta-
pascalc|PTO
:
approval-mozilla-release-
|
Details | Review |
Steps to reproduce:
Open properties of a virtual folder, click on "Subject" or "contains".
Actual results:
Popup menu opens, but is inaccessible by mouse, neither following the mouse cursor nor accepting clicks.
Expected results:
Popup menu opens, follows mouse cursor and reacts to mouse clicks.
| Assignee | ||
Comment 1•3 years ago
|
||
| Assignee | ||
Comment 2•3 years ago
|
||
| Assignee | ||
Comment 3•3 years ago
|
||
Interestingly, the same popup menu does work in the "Search Messages" window, which happens to be non-modal, see attached screen caps.
| Assignee | ||
Comment 4•3 years ago
|
||
Name: Thunderbird
Version: 110.0a1
Build ID: 20230105100644
Distribution ID:
Update Channel: nightly
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:109.0) Gecko/20100101 Firefox/110.0 Thunderbird/110.0a1
OS: Linux 5.10.0-21-amd64 #1 SMP Debian 5.10.162-1 (2023-01-21)
OS Theme: Adwaita / Adwaita
| Assignee | ||
Comment 5•3 years ago
|
||
Running mozregression gave the following result:
6:35.78 INFO: No more integration revisions, bisection finished.
6:35.78 INFO: Last good revision: ff5b4d8b5e79413d68982721a4bc76c9fcadacc1
6:35.78 INFO: First bad revision: d2cfb915124c21b03c062d8acc75e8282ec3b720
6:35.78 INFO: Pushlog:
https://hg.mozilla.org/comm-central/pushloghtml?fromchange=ff5b4d8b5e79413d68982721a4bc76c9fcadacc1&tochange=d2cfb915124c21b03c062d8acc75e8282ec3b720
The corresponding regression range in mozilla-central seems to be https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=9d96d2c96d8fe1d9365fdaee30d8fda048c48aa1&tochange=8e6dd71c4ece68ea8667d0e75488023b502bca76.
Maybe a regression in connection with fixing bug 1807482?
| Assignee | ||
Comment 6•3 years ago
|
||
Some more system information by neofetch:
OS: Debian GNU/Linux 11 (bullseye) x86_64
Host: VirtualBox 1.2
Kernel: 5.10.0-21-amd64
Uptime: 1 hour, 20 mins
Packages: 1499 (dpkg)
Shell: bash 5.1.4
Resolution: 1680x1050
DE: Xfce 4.16
WM: Xfwm4
WM Theme: Default
Theme: Adwaita [GTK2/3]
Icons: Papirus [GTK2/3]
Terminal: xfce4-terminal
Terminal Font: Monospace 12
CPU: AMD Ryzen 5 PRO 4650G with Radeon Graphics (4) @ 3.693GHz
GPU: 00:02.0 VMware SVGA II Adapter
Memory: 2840MiB / 7957MiB
| Assignee | ||
Updated•3 years ago
|
Comment 7•3 years ago
|
||
Does this happen in other desktop environments? That bug shouldn't have affected xfwm. https://hg.mozilla.org/mozilla-central/rev/47c002d3637247e71ee901f32421deaecc9d8ea3 is probably a better candidate, but hard to say... would there be any chance of narrowing that regression range?
| Assignee | ||
Comment 8•3 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #7)
Does this happen in other desktop environments? That bug shouldn't have affected xfwm. https://hg.mozilla.org/mozilla-central/rev/47c002d3637247e71ee901f32421deaecc9d8ea3 is probably a better candidate, but hard to say... would there be any chance of narrowing that regression range?
I tested Ubuntu 22.04 (Gnome/Mutter) as well as Kubuntu 22.04 (Plasma/KWin) in virtual machines, exactly the same behavior.
Unfortunately I have no idea how to further narrow down the regression window, as so much change sets have been pushed together ...
| Assignee | ||
Comment 9•3 years ago
|
||
Just for the record, the same builds work flawlessly under Windows, so I assume it's some Linux-specific change that's responsible.
| Assignee | ||
Comment 10•3 years ago
|
||
So I cloned revisions 9d96d2c96d8fe1d9365fdaee30d8fda048c48aa1 of mozilla-central and ff5b4d8b5e79413d68982721a4bc76c9fcadacc1 of comm-central and built Thunderbird completely. As expected the popup menu works flawlessly. Then I imported just the raw diff from https://phabricator.services.mozilla.com/rMOZILLACENTRAL6b9b8523de07f62b35b94c63e2b93cf995c440f7 and built again. The resulting binary actually shows the erroneous mouse behavior, so that commit seems indeed to be the problem.
Comment 11•3 years ago
|
||
Huh, so gtk_grab_add does have a useful effect? That's rather surprising.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 12•3 years ago
|
||
Updated•3 years ago
|
Comment 13•3 years ago
|
||
Set release status flags based on info from the regressing bug 1807482
Comment 14•3 years ago
|
||
Comment 15•3 years ago
|
||
| bugherder | ||
Comment 17•3 years ago
|
||
The patch landed in nightly and beta is affected.
:welpy-cw, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox110towontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 18•3 years ago
|
||
I am not sure, TB 111.0b1 is expected in eleven days and Firefox doesn't seem especially affected. What do you think, :mkmelin?
Comment 19•3 years ago
|
||
It would seem good to uplift to beta, but not critical.
| Assignee | ||
Comment 20•3 years ago
|
||
Comment on attachment 9315471 [details]
Bug 1813498 - Make popup modal also on X11. r=emilio
Beta/Release Uplift Approval Request
- User impact if declined: popup menus in modal windows aren't accessible by mouse
- Is this code covered by automated tests?: Unknown
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): minimal change with no side effects to be expected
- String changes made/needed:
- Is Android affected?: Unknown
Comment on attachment 9315471 [details]
Bug 1813498 - Make popup modal also on X11. r=emilio
This is too late for beta as we build our RC today and I think we don't have a good enough benefit/risk ratio to take just before the merge. I am morphing the request into a release approval request and we'll reevaluate for a potential inclusion in our planned dot release, thanks.
Updated•3 years ago
|
Updated•3 years ago
|
Updated•3 years ago
|
Comment on attachment 9315471 [details]
Bug 1813498 - Make popup modal also on X11. r=emilio
This patch is now on 111 beta and the Thunderbird 111.0b1 should ship soon, I think this should just ride the 111 train, thanks.
Description
•