Bug 1813498 - Make popup modal also on X11. r=emilio,stransky

Differential Revision: https://phabricator.services.mozilla.com/D168599